2011-02-17  Katsumi Yamaoka  <yamaoka@jpl.org>

	* auth-source.el: Bind load-path when loading EIEIO from
	"gnus-fallback-lib/eieio"; don't pass more than two args, that XEmacs
	21.4 doesn't support, to `require'.

2011-02-16  Raphael Kubo da Costa  <kubito@gmail.com>  (tiny change)

	* auth-source.el: Correctly load EIEIO from "gnus-fallback-lib/eieio"
	as EIEIO must also be loaded when auth-source.el is being
	byte-compiled.

2011-02-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-fallback-lib/eieio/eieio.el: Copy from Emacs.

	* gnus-fallback-lib/eieio/eieio-speedbar.el: Copy from Emacs.

	* gnus-fallback-lib/eieio/eieio-opt.el: Copy from Emacs.

	* gnus-fallback-lib/eieio/eieio-datadebug.el: Copy from Emacs.

	* gnus-fallback-lib/eieio/eieio-custom.el: Copy from Emacs.

	* gnus-fallback-lib/eieio/eieio-comp.el: Copy from Emacs.

	* gnus-fallback-lib/eieio/eieio-base.el: Copy from Emacs.

	* auth-source.el: Load EIEIO from "gnus-fallback-lib/eieio" if
	necessary.

2011-02-16  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-propagate-marks): Change default to t again, since
	nil means that nnimap doesn't get updated.

2011-02-16  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-netrc-create): Return a synthetic search
	result when the user doesn't want to write to the file.
	(auth-source-netrc-search): Expect a synthetic result and proceed
	accordingly.
	(auth-source-cache-expiry): New variable to override
	`password-cache-expiry'.
	(auth-source-remember): Use it.

	* nnimap.el (nnimap-credentials): Remove the `inhibit-create'
	parameter.  Create entry if necessary by using :create t.
	(nnimap-open-connection-1): Don't pass `inhibit-create'.

2011-02-15  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-debug): Enable by default and don't
	mention the obsolete `auth-source-hide-passwords'.
	(auth-source-do-warn): New function to debug unconditionally.
	(auth-source-do-debug): Use it.